@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST nfoview-1.10.tar.gz 102058 SHA256 49e771c059824563aa518e163c68da0c08b04bc174521d2ecff7934a550d4b49 SHA512 6114a6944b7886a6def01cd47649109d5e16921128cd8be122cb3395831038037b45160c3f0449e31fbb2bec88ac1e2c07294a5aaceea51a4fea93b7ea4440af WHIRLPOOL 348eb59e68320591f6a6713ca3ce20e44b0c9d07d35edf791619a66c85fec811b6d12951c0690ed5b6650b5a6e8491612a1d426cdbe6121d5e5d29b8c861feb1
 DIST nfoview-1.15.1.tar.xz 88400 SHA256 ed7643a781e9a96a904b1165dbefd0440fa029d25819233f0543925bb7067b1e SHA512 e4cf86003b03ae57b8a4e76990df77c7e9e441abd8ab0440385405b0f600a85539a152de5893ebe75797bd96ecb811086c48b1439b9f8719050eb12315f67426 WHIRLPOOL da47cc6275fec9a8d01d2bd38eabbf66188eec7c7e6cd657f3ebfbe4b51f010a3dcbd29faad7978aa504a8faa191959d8a3d36b0f54c301c84d3a2b089a4309a
 EBUILD nfoview-1.10.ebuild 1089 SHA256 7f1a05396995351143fae88d80de1a5e094aa3068d6eb7b1487337a2468dfd25 SHA512 db1d752cd11ddf7612b3f5f00a03d5b8fc51a530553c5a07cc659f151dfa3a5ddec6542b5d45506a9c51b16e28043d93f7e6bf1b926a24297626ae7dcddc21fb WHIRLPOOL dfff4ba516e7cdf6c618e7ac1dce31b907e3a7f4f2b76c02d3ccf961ea8ab03e2b2c201059a8989364e09b948ac76a9f449311a37447f3bff628ba7a1814b627
-EBUILD nfoview-1.15.1.ebuild 1014 SHA256 5ffe3fb4869f5583edf2d5674ab8448b639259c12074ac1a23b45a02e87d0ef8 SHA512 2fd53a9f6dd4fafa290447225203bd277f3120a9616ad219fefab98d8d88437d4ff5c2f883a4d3c92376af71198d8f068f82ed9a5144d58818d4d2af752cfcb2 WHIRLPOOL ad58775f2814ba47121a57d89d7b54fc06d4754f7070b39a8c8b11932f6792e6e6e911afead9172de5d2db38326e9a1c77316d4c9326a34586fd77e50083fe79
+EBUILD nfoview-1.15.1.ebuild 1012 SHA256 23f29614331d442b5fa38a0a1601f5382ff7e8ecfabc4a90e6c2e1affb6d00cf SHA512 200ac804a7de7e4d42cb7165219b1f22656570f59ce36f94c054941270e43ebe7f8dd519e099ae4ae9d645d4cbf9cce37a48ae29bb621e578d82f90ff439be1a WHIRLPOOL 05c4dc14da26d19f74df6607299501133ae3879290e6ce7af82361dbe149b001cc8639d1a8e5ddedf1e17349ead0ed1550cd74a063b1df2d52e38859f4525336
 EBUILD nfoview-9999.ebuild 1013 SHA256 9eae11418a26cf9283e11e417f33d3ec3ec7fa5fd0adc80b5d268a11145e4a70 SHA512 870272b8c37762675a3d9627e1bc2f1c2f41e9bd3ff3ff49b77d878b5def125d970bad966521c055bc37db65c2872b8af6aa398146f2dc49a572220521ef97b5 WHIRLPOOL 61c3089b9663efdc48eaa97d5cf73e5144f29d95f53c80c96299a80ee2221a5ffc2554ebf974f7b1fb4bc07d3e9a643cde760676f7425581b00caedd1bf55a59
-MISC ChangeLog 3666 SHA256 615159732717c2555eda20543a7447a7de46b73551baed9a399a03528d3f0c65 SHA512 b87d51de39149f014e31a6b7c1581949b3101c1fe49cb6a494dd7e88c45b6b89db6673a263dd0c24afe62bd8ab094d05599e2f5297d16252ac8558ff86906670 WHIRLPOOL d8b0a062bde13057dcce95a8a935d98026ba39ee0d4b243059b85ebcd4653d03b15fa38b2ba3c36f92e5fa023d1e9d0df35485c38bb383a5f36302083d0130cf
+MISC ChangeLog 3766 SHA256 81a68847e737717c2564821383698ee2bcb67767313663f6bf687a54620ca142 SHA512 10c6fef3306a3a6415b3cc7f7f4cfeddd089b534c7ef6f8d4db1c33e36cd24cf1dac87849d50dd7037abd6189559cfc7a1714f7db44c727a06c7395d0d16fe47 WHIRLPOOL a3fe14fcc478fb161681d41657c9a47b3f44c6f41ac59556f4ba961e837bc6aea18f793b9d570fd5094e0802d404c4ad6991b557d999436b38c64624b2a6decd
 MISC metadata.xml 200 SHA256 eb63f2affd0b8e3f5149df2f2f964910eb2127b650919a9e7892fae011e2b22b SHA512 da94c752d3f451652f15c0c459caa079e1d11f37278f86da057ed915ba167688ea62ec62c3c6406200fa951f8f495e9dd782d0e12f9e315187ba4de305f13a1d WHIRLPOOL 80bd517227281caf99e291cd59cd6e5deec972d693473727c7dcd6195450ea9dca63a151e52111c7c2456831f19113008ec60a5c1a66cc3b24f8b17c74e2c373
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVwYV/AAoJEPGu1DbS6WIAe8oP/3aPg1vov6r7NOJNv+j5TyiJ
+ewuWJ1iRSKHjOe2VumTroQGW56vNUPhyFHbh7GVv81GngWZaLuIAMsHNHdThBOgj
+rMEjE5jFoa/DR9eIFechmOzj11zL/crHn7Z1ZYkXvBjWOsJ9bUuoOdLBTRIEaRMO
+87ESTBJhx+W0vkWH1D6Lh5v9Etknkov0ovgVJiKtENxIncf4CrHQaaJUVV5aiYes
+kpaC/WkoC5Ds09r0hsnr1tNiJarFJGrPl9QAp8031ulm3L5KZy8KF1suBOsScG1v
+Ma8wcwlaNCHQyHQ+jvlAX++SW6jWDn6nyiYcT71PThxF8uTiFPN+giaj8QKbdRCG
+E1imeMlcfUaznsBGaDh7JEcuZKZhy8unYS2tArDTdH+c1NMmVPexvWCX0rv7RmXd
+SubqYYs/IyFOE8uFXH0UA9nhJaQUjZROnJJtBH/KdlF/gRLD+WRUUQ7k6+EyqNZB
+U3suXwAsdU4rk6EgCVChK6jIy0b51yrtXuSei6fk1YxB6uBJUgnu13b6SphT97Lk
+yRiPPNew2zXvmNdNsEYLi9frnzPaSRBeWgCAKgn3JqxFSzsg+/rEgINbcLZhqtw/
+WcwO0fDvmI+xYszOo1ZEdLKRRWCHa/jH1MYm7h7pTSkHUGX1B/wgWQ7q3h/zuyLM
+Gr+VygWwFL83gWRwPSLG
+=lPmN
+-----END PGP SIGNATURE-----
