@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/nfoview/nfoview-1.15.1.ebuild,v 1.1 2015/03/26 23:38:57 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/nfoview/nfoview-1.15.1.ebuild,v 1.2 2015/08/05 03:39:33 vapier Exp $
 
 EAPI="5"
 
@@ -15,7 +15,7 @@ if [[ ${PV} == "9999" ]] ; then
 	#KEYWORDS=""
 else
 	SRC_URI="http://download.gna.org/nfoview/${PV:0:4}/${P}.tar.xz"
-	KEYWORDS="~amd64 ~x86"
+	KEYWORDS="amd64 x86"
 fi
 
 DESCRIPTION="simple viewer for NFO files, which are ASCII art in the CP437 codepage"
