@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/utempter/utempter-0.5.5.6.ebuild,v 1.18 2012/05/24 02:35:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/utempter/utempter-0.5.5.6.ebuild,v 1.19 2015/08/05 03:44:24 vapier Exp $
 
 inherit rpm eutils user
 
@@ -15,7 +15,8 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86"
 IUSE=""
 
-RDEPEND="!sys-libs/libutempter"
+RDEPEND="!sys-libs/libutempter
+	!dev-python/utmp"
 
 pkg_setup() {
 	enewgroup utmp 406
