@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/utempter
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/utempter/ChangeLog,v 1.47 2012/05/24 02:35:09 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/utempter/ChangeLog,v 1.48 2015/08/05 03:44:24 vapier Exp $
+
+  05 Aug 2015; Mike Frysinger <vapier@gentoo.org> utempter-0.5.5.6.ebuild:
+  Block dev-python/utmp as it installs `utmp` too #556644 by Toralf Förster.
 
   24 May 2012; Mike Frysinger <vapier@gentoo.org> utempter-0.5.5.6.ebuild:
   Inherit user for enewuser/etc...
