@@ -1,6 +1,9 @@
 # ChangeLog for app-text/nfoview
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/nfoview/ChangeLog,v 1.26 2015/07/23 12:47:46 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/nfoview/ChangeLog,v 1.27 2015/08/05 03:39:33 vapier Exp $
+
+  05 Aug 2015; Mike Frysinger <vapier@gentoo.org> nfoview-1.15.1.ebuild:
+  Mark amd64/x86 stable.
 
   23 Jul 2015; Manuel Rüger <mrueg@gentoo.org> -nfoview-1.12.1.ebuild,
   -nfoview-1.9.1.ebuild:
